syntax = "proto3";

service FileGrpcService {
  rpc UploadTrackFile(stream UploadTrackFileRequest) returns (UploadTrackFileResponse);
  rpc DownloadTrackFile(DownloadTrackFileRequest) returns (stream DownloadTrackFileResponse);

  rpc UploadImage(stream UploadImageRequest) returns (UploadImageResponse);
  rpc DownloadImage(DownloadImageRequest) returns (stream DownloadImageResponse);
}

message UploadTrackFileRequest {
	string track_id = 1;
	bytes chunk = 2;
}
message UploadTrackFileResponse {
  string file_url = 1;
}

message DownloadTrackFileRequest {
  string track_id = 1;
}
message DownloadTrackFileResponse {
  bytes chunk = 1;
}

message UploadImageRequest {
  oneof data {
    ImageMetadata metadata = 1;
    bytes chunk = 2;
  }
}
message UploadImageResponse {
  string url = 1;
}

message DownloadImageRequest {
  string entity_type = 1;
  string entity_id = 2;
}
message DownloadImageResponse {
  bytes chunk = 1;
}

enum EntityType {
	TRACK = 0;
	ALBUM = 1;
	PLAYLIST = 2;
	USER = 3;
}

message ImageMetadata {
  string EntityType = 1; // track, album, user, playlist
  string entity_id = 2;
  string file_name = 3;
  string content_type = 4;
}